// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttentionIndicator snapshot color orange 1`] = `
<div
  class="absolute antialiased flex flex-col items-center justify-center leading-none p-0.5 right-0 text-center text-white tracking-tight top-0 bg-orange-600 h-3 min-w-3 text-2xs rounded-full"
/>
`;

exports[`AttentionIndicator snapshot color red 1`] = `
<div
  class="absolute antialiased flex flex-col items-center justify-center leading-none p-0.5 right-0 text-center text-white tracking-tight top-0 bg-red-600 h-3 min-w-3 text-2xs rounded-full"
/>
`;

exports[`AttentionIndicator snapshot shape circle 1`] = `
<div
  class="absolute antialiased flex flex-col items-center justify-center leading-none p-0.5 right-0 text-center text-white tracking-tight top-0 bg-red-600 h-3 min-w-3 text-2xs rounded-full"
/>
`;

exports[`AttentionIndicator snapshot shape rounded-rectangle 1`] = `
<div
  class="absolute antialiased flex flex-col items-center justify-center leading-none p-0.5 right-0 text-center text-white tracking-tight top-0 bg-red-600 h-3 min-w-3 text-2xs font-medium leading-normal rounded-md h-4"
/>
`;

exports[`AttentionIndicator snapshot size md 1`] = `
<div
  class="absolute antialiased flex flex-col items-center justify-center leading-none p-0.5 right-0 text-center text-white tracking-tight top-0 bg-red-600 h-4 min-w-4 text-xs font-medium rounded-full"
/>
`;

exports[`AttentionIndicator snapshot size sm 1`] = `
<div
  class="absolute antialiased flex flex-col items-center justify-center leading-none p-0.5 right-0 text-center text-white tracking-tight top-0 bg-red-600 h-3 min-w-3 text-2xs rounded-full"
/>
`;
